--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="content-editor">
                     <ul>
                         <li>掌握JavaScript/HTML5/CSS、JQuery等技术及框架；</li>
-                        <li>熟悉Vue等主流前端框架开发经验并有相关项目开发经验；</li>
+                        <li>熟悉Vue、React主流前端框架开发经验并有相关项目开发经验；熟悉 Node.js关注业界新技术</li>
                         <li>微信小程序，有过商城和外卖项目的开发经验；</li>
                         <li>熟悉PHP后端技术；有属于自己的轮子</li>
                         <li>掌握常用Linux命令，并能够搭建PHP、Java环境</li>
